(feat): Addressed comments in MR

--- a/src/app/common/components/badges/badges.component.html
+++ b/src/app/common/components/badges/badges.component.html
@@ -1,5 +1,5 @@
 <ul class="m-channel--badges">
-  <li *ngIf="isFromPublisherCard">
+  <li *ngIf="showMidDot">
     &middot;
   </li>
   <li *ngIf="shouldShowVerifiedBadge()" (click)="verify($event)">
