--- a/src/app/common/components/publisher-card/publisher-card.component.html
+++ b/src/app/common/components/publisher-card/publisher-card.component.html
@@ -42,7 +42,7 @@
             class="m-channel--badges-activity"
             [user]="publisher"
             [badges]="['admin', 'verified', 'plus', 'pro']"
-            [isFromPublisherCard]="true"
+            [showMidDot]="true"
           ></m-channel--badges>
         </div>
         <div>
