remove flag: wallet-v3

--- a/src/app/modules/wallet/components/components/earnings/earnings.component.html
+++ b/src/app/modules/wallet/components/components/earnings/earnings.component.html
@@ -94,7 +94,7 @@
   </table>
 </div>
 
-<!-- Reusable row arrow arrow -->
+<!-- Reusable row arrow -->
 <ng-template #expandArrow let-rowId="rowId">
   <i class="material-icons" (click)="toggleRow(rowId)">{{
     expandedRow === rowId ? 'expand_less' : 'expand_more'
