--- a/src/app/modules/wallet/components/tokens/settings/settings-tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/settings/settings-tokens.component.html
@@ -249,4 +249,4 @@
   </p>
 </ng-template>
 
-<m-walletSettings--btc *mIfFeature="'wallet-v3'"></m-walletSettings--btc>
+<m-walletSettings--btc></m-walletSettings--btc>
