--- a/src/app/modules/notifications/toggle.component.html
+++ b/src/app/modules/notifications/toggle.component.html
@@ -7,7 +7,7 @@
     <i class="material-icons" m-tooltip--icon>notifications</i>
     Notifications</m-tooltip
   >
-  <span *ngIf="newNavigation && service.count > 0">{{ service.count }}</span>
+  <span *ngIf="service.count > 0">{{ service.count }}</span>
 </a>
 
 <div
