Remove refs to very old feature flags

--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -2,10 +2,7 @@
   <!-- ------------------------------------------ -->
   <!-- LANGUAGE BAR -->
   <!-- ------------------------------------------ -->
-  <div
-    class="m-marketingFooter__section--language"
-    *mIfFeature="'localization-2020'"
-  >
+  <div class="m-marketingFooter__section--language">
     <m-language__bar></m-language__bar>
   </div>
   <!-- ------------------------------------------ -->
