--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -43,68 +43,66 @@
     </div>
 
     <div class="minds-list" m-hotkeyScroll [anchors]="feedViewChildren">
-      <ng-container *ngFor="let preActivity of prepended">
-        <m-activity
-          [entity]="preActivity"
+      <ng-container *ngIf="algorithm === 'latest'">
+        <ng-container *ngFor="let preActivity of prepended">
+          <m-activity
+            [entity]="preActivity"
+            [displayOptions]="{
+              showOnlyCommentsInput: true,
+              isFeed: true
+            }"
+            (deleted)="delete(preActivity)"
+          ></m-activity>
+        </ng-container>
+      </ng-container>
+
+      <!--boost rotator-->
+      <ng-container *mIfFeature="'boost-rotator'">
+        <ng-container *mIfBrowser>
+          <m-newsfeed--boost-rotator
+            *ngIf="showBoostRotator"
+            #feedViewChildren
+          ></m-newsfeed--boost-rotator>
+        </ng-container>
+      </ng-container>
+
+      <!--actual feed-->
+      <ng-container
+        *ngFor="let activity$ of feedService.feed | async; let i = index"
+      >
+        <m-featured-content
+          *ngIf="(i > 0 && i % 5 === 0) || i === 3"
+          [slot]="i + 1"
           [displayOptions]="{
             showOnlyCommentsInput: true,
             isFeed: true
           }"
-          (deleted)="delete(preActivity)"
+          #feedViewChildren
+        ></m-featured-content>
+        <m-topHighlights
+          (onSeeMore)="onShowMoreTopFeed()"
+          *ngIf="shouldShowTopHighlights(i)"
+        ></m-topHighlights>
+        <m-activity
+          *ngIf="activity$ | async as activity"
+          [entity]="activity"
+          [displayOptions]="{
+            showOnlyCommentsInput: true,
+            isFeed: true
+          }"
+          [slot]="i + 1"
+          (deleted)="delete(activity)"
+          #feedViewChildren
         ></m-activity>
       </ng-container>
 
-      <ng-container *ngIf="!inProgress">
-        <!--boost rotator-->
-        <ng-container *mIfFeature="'boost-rotator'">
-          <ng-container *mIfBrowser>
-            <m-newsfeed--boost-rotator
-              *ngIf="showBoostRotator"
-              #feedViewChildren
-            ></m-newsfeed--boost-rotator>
-          </ng-container>
-        </ng-container>
-
-        <!--actual feed-->
-        <ng-container
-          *ngFor="let activity$ of feedService.feed | async; let i = index"
-        >
-          <m-featured-content
-            *ngIf="(i > 0 && i % 5 === 0) || i === 2"
-            [slot]="i + 1"
-            [displayOptions]="{
-              showOnlyCommentsInput: true,
-              isFeed: true
-            }"
-            #feedViewChildren
-          ></m-featured-content>
-          <m-topHighlights
-            (onSeeMore)="onShowMoreTopFeed()"
-            *ngIf="shouldShowTopHighlights(i)"
-          ></m-topHighlights>
-          <m-activity
-            *ngIf="activity$ | async as activity"
-            [entity]="activity"
-            [displayOptions]="{
-              showOnlyCommentsInput: true,
-              isFeed: true
-            }"
-            [slot]="i + 1"
-            (deleted)="delete(activity)"
-            #feedViewChildren
-          ></m-activity>
-        </ng-container>
-
-        <infinite-scroll
-          distance="25%"
-          (load)="loadNext()"
-          [moreData]="feedService.hasMore | async"
-          [inProgress]="feedService.inProgress | async"
-        >
-        </infinite-scroll>
-      </ng-container>
-
-      <m-loadingSpinner [inProgress]="inProgress"></m-loadingSpinner>
+      <infinite-scroll
+        distance="25%"
+        (load)="loadNext()"
+        [moreData]="feedService.hasMore | async"
+        [inProgress]="feedService.inProgress | async"
+      >
+      </infinite-scroll>
     </div>
   </ng-container>
 </div>
