--- a/src/app/common/components/emoji-picker/emoji-picker.component.html
+++ b/src/app/common/components/emoji-picker/emoji-picker.component.html
@@ -3,21 +3,12 @@
   [popperPlacement]="'bottom'"
   [popperTrigger]="'click'"
   [popperModifiers]="popperModifiers"
-  (popperOnShown)="shown = true"
-  (popperOnHidden)="shown = false"
+  (popperOnShown)="onShowSelector()"
+  (popperOnHidden)="onHideSelector()"
 >
   <i class="m-emojiPicker__icon material-icons">insert_emoticon</i>
 </div>
 
 <popper-content #popper>
-  <emoji-mart
-    *ngIf="shown"
-    [autoFocus]="true"
-    [isNative]="true"
-    title="Pick your emoji…"
-    emoji="point_up"
-    color="#1b85d6"
-    [darkMode]="themeService.isDark$ | async"
-    (emojiSelect)="emojiSelect($event)"
-  ></emoji-mart>
+  <ng-template #emojiPickerOutlet></ng-template>
 </popper-content>
