(fix): default height for selector to avoid popper placing in wrong position

--- a/src/app/common/components/emoji-picker/emoji-picker.component.html
+++ b/src/app/common/components/emoji-picker/emoji-picker.component.html
@@ -10,5 +10,7 @@
 </div>
 
 <popper-content #popper>
-  <ng-template #emojiPickerOutlet></ng-template>
+  <div class="m-emojiPicker__placeholder">
+    <ng-template #emojiPickerOutlet></ng-template>
+  </div>
 </popper-content>
