Fix issue with modal height for images and rich embeds #5247

--- a/src/app/modules/modals/v3/modal-v3.component.scss
+++ b/src/app/modules/modals/v3/modal-v3.component.scss
@@ -35,6 +35,10 @@ body.modal-open {
   max-width: 95vw !important;
 }
 
+.modal-fitcontent {
+  max-width: fit-content;
+}
+
 @media screen and (min-width: 1920px) {
   .modal-xl {
     max-width: 1824px !important;
