Fix weird rich embeds

--- a/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
@@ -152,7 +152,7 @@ $modal-padding: 20px;
           width: 100%;
 
           img {
-            max-height: 400px;
+            max-height: 100%;
           }
         }
 
