--- a/src/app/modules/discovery/disclaimer/disclaimer.component.ng.scss
+++ b/src/app/modules/discovery/disclaimer/disclaimer.component.ng.scss
@@ -63,24 +63,24 @@
         }
       }
     }
+  }
 
-    .m-discovery__disclaimer--popover m-sidebarWidget {
-      display: none;
+  &.m-discovery__disclaimer--popover m-sidebarWidget {
+    display: none;
 
-      @media screen and (max-width: $layoutMin3ColWidth) {
-        display: block;
-        position: fixed;
-        bottom: 20px;
-        left: 20vw;
-        right: 20vw;
-        @include z-index(toast);
-        box-shadow: 0 $m-boxShadowOffset $m-boxShadowBlur rgba(0, 0, 0, 0.05);
-      }
+    @media screen and (max-width: $layoutMin3ColWidth) {
+      display: block;
+      position: fixed;
+      bottom: 20px;
+      left: 20vw;
+      right: 20vw;
+      @include z-index(toast);
+      box-shadow: 0 $m-boxShadowOffset $m-boxShadowBlur rgba(0, 0, 0, 0.05);
+    }
 
-      @media screen and (max-width: $layoutMax2ColFixedWidth) {
-        left: 20px;
-        right: 20px;
-      }
+    @media screen and (max-width: $layoutMax2ColFixedWidth) {
+      left: 20px;
+      right: 20px;
     }
   }
 }
