--- a/src/app/modules/discovery/tags/sidebar-tags.component.html
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.html
@@ -19,7 +19,7 @@
         </ng-container>
         <ng-template #forYou>
           <li
-            *ngFor="let tag of foryou$ | async | slice: 0:limit"
+            *ngFor="let tag of trending$ | async | slice: 0:limit"
             class="m-discoveryTrends__trend"
           >
             <ng-container
