Discovery on register experiment #5214

--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -25,6 +25,10 @@
         <m-discovery__sidebarTags
           *ngIf="!isPlusPage"
         ></m-discovery__sidebarTags>
+        <m-suggestions__sidebar
+          type="user"
+          customTitle="popular_channels"
+        ></m-suggestions__sidebar>
       </div>
     </div>
   </div>
