--- a/src/app/common/components/emoji-picker/emoji-picker.component.html
+++ b/src/app/common/components/emoji-picker/emoji-picker.component.html
@@ -6,7 +6,7 @@
   (popperOnShown)="onShowSelector()"
   (popperOnHidden)="onHideSelector()"
 >
-  <i class="m-emojiPicker__icon material-icons">insert_emoticon</i>
+  <i class="m-emojiPicker__icon material-icons">emoji_emotions</i>
 </div>
 
 <popper-content #popper>
