CONTAIN THE IMAGE

--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -226,7 +226,7 @@ m-activity__content {
     display: block;
     height: auto;
     max-height: 400px;
-    object-fit: cover;
+    object-fit: contain;
   }
   .meta {
     padding: 20px $activity-padding-lr;
