--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -49,7 +49,6 @@ m-activity__content {
 .m-activityContent__message {
   font-size: 15px;
   white-space: pre-line;
-  flex: 1;
 
   &.m-activityContent__message--isTextOnly {
     word-break: break-word;
@@ -175,6 +174,7 @@ m-activity__content {
   img {
     object-fit: contain;
     width: 100%;
+    max-height: 800px;
   }
 }
 
@@ -225,7 +225,7 @@ m-activity__content {
     display: block;
     height: auto;
     max-height: 400px;
-    object-fit: contain;
+    object-fit: cover;
   }
   .meta {
     padding: 20px $activity-padding-lr;
