--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -72,6 +72,7 @@
               "
               [@slowFade]="(this.service.loading$ | async) ? 'out' : 'in'"
               [ngClass]="{ missingDimensions: mediaHeight === 0 }"
+              [maxHeightAllowed]="stageHeight"
             ></m-activity__content>
             <m-activity__modalQuote
               *ngIf="isQuote && entity"
