--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -82,11 +82,7 @@
             [anchor]="'left'"
             [useParentPosition]="true"
           >
-            <m-icon
-              iconId="home"
-              [sizeFactor]="nav2021Feature ? 8 : 35"
-              m-tooltip--icon
-            ></m-icon
+            <m-icon iconId="home" [sizeFactor]="27" m-tooltip--icon></m-icon
             ><ng-container i18n="@@COMMON__NEWSFEED"
               >Newsfeed</ng-container
             ></m-tooltip
@@ -172,7 +168,7 @@
           >
             <m-icon
               iconId="account_balance"
-              [sizeFactor]="nav2021Feature ? 8 : 35"
+              [sizeFactor]="27"
               m-tooltip--icon
             ></m-icon>
             <ng-container i18n="@@COMMON__WALLET">Wallet</ng-container>
@@ -351,7 +347,7 @@
                 <m-icon
                   from="custom"
                   iconId="wallet"
-                  [sizeFactor]="nav2021Feature ? 8 : 35"
+                  [sizeFactor]="27"
                   m-tooltip--icon
                 ></m-icon>
                 <ng-container i18n="@@COMMON__BUY_CRYPTO"
@@ -413,11 +409,7 @@
               [anchor]="'left'"
               [useParentPosition]="true"
             >
-              <m-icon
-                iconId="group"
-                [sizeFactor]="nav2021Feature ? 8 : 35"
-                m-tooltip--icon
-              ></m-icon>
+              <m-icon iconId="group" [sizeFactor]="27" m-tooltip--icon></m-icon>
               <ng-container i18n="@@COMMON__GROUPS">Groups</ng-container>
             </m-tooltip>
             <span
