--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
@@ -22,6 +22,7 @@ m-usermenu__v3 {
       margin: 34px 0 0;
       top: 15px;
       right: -20px;
+      padding: 18px 0;
 
       @include m-theme() {
         background-color: themed($m-bgColor--secondary);
@@ -56,7 +57,6 @@ m-usermenu__v3 {
         }
 
         &.m-userMenuDropdown__username {
-          margin-top: 18px;
           padding-top: 8px;
           padding-bottom: 8px;
 
