Fix issue where security check state is not picked up by parent register

--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -62,6 +62,23 @@
           />
         </m-popover>
       </div>
+      <div
+        class="m-register__error"
+        [style.visibility]="showError('newPassword') ? 'visible' : 'hidden'"
+      >
+        <ng-container
+          *ngIf="this.form.get('newPassword').errors?.invalidPassword"
+          i18n="@@MINDS__REGISTER__EXCEPTION__INVALID_PASSWORD"
+        >
+          Invalid password.&nbsp;
+        </ng-container>
+        <ng-container
+          *ngIf="this.form.get('newPassword').errors?.passwordSecurityFailed"
+          i18n="@@MINDS__REGISTER__EXCEPTION__PASSWORD_SECURITY_CHECK_FAILED"
+        >
+          Password security check failed.&nbsp;
+        </ng-container>
+      </div>
     </div>
     <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
