--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -20,7 +20,7 @@
     </ng-container>
 
     <div
-      *ngIf="topFeedExperiment.isActive()"
+      *ngIf="topFeedExperimentActive"
       class="m-newsfeed__subscribed__feedType"
     >
       <span
