fix lint again argh

--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -4,9 +4,7 @@
   *ngIf="entity && entity.content_type"
 >
   <div class="m-activityModal__theater" (click)="clickedModal($event)">
-    <div
-      class="m-activityModal m-activityModal__clearFix"
-    >
+    <div class="m-activityModal m-activityModal__clearFix">
       <!-- -------------------------------------------------- -->
       <!-- --LEFT SIDE--------------------------------------- -->
       <!-- -------------------------------------------------- -->
