load emoji mart on mouseOver

--- a/src/app/common/components/emoji-picker/emoji-picker.component.html
+++ b/src/app/common/components/emoji-picker/emoji-picker.component.html
@@ -5,6 +5,7 @@
   [popperModifiers]="popperModifiers"
   (popperOnShown)="onShowSelector()"
   (popperOnHidden)="onHideSelector()"
+  (mouseenter)="onMouseEnter()"
 >
   <i class="m-emojiPicker__icon material-icons">insert_emoticon</i>
 </div>
