Fix invalid weight property (font-weight)

--- a/src/app/modules/settings-v2/security/two-factor-v2/recovery-codes/recovery-codes.component.ng.scss
+++ b/src/app/modules/settings-v2/security/two-factor-v2/recovery-codes/recovery-codes.component.ng.scss
@@ -3,7 +3,7 @@
 :host {
   .m-twoFactor__recoveryCodeHeader {
     font-size: 20px;
-    weight: 500;
+    font-weight: 500;
 
     @include m-theme() {
       color: themed($m-textColor--primary);
