--- a/src/app/common/components/subscribe-button/subscribe-button.component.html
+++ b/src/app/common/components/subscribe-button/subscribe-button.component.html
@@ -26,7 +26,7 @@
     [disabled]="inProgress || disableSubscribe"
   >
     <i class="material-icons">
-      close
+      {{ subscribedIcon }}
     </i>
     <span *ngIf="!iconOnly">
       <ng-container i18n="@@MINDS__BUTTONS__UNSUBSCRIBE__SUBSCRIBED_LABEL"
