--- a/src/app/common/components/channel-recommendation/channel-recommendation.component.ng.scss
+++ b/src/app/common/components/channel-recommendation/channel-recommendation.component.ng.scss
@@ -60,6 +60,9 @@
         }
         .contentContainer {
           flex: 1;
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
 
           .title {
             display: block;
