Fix css issue with old sidebar nav "& >" -> ">"

--- a/src/app/common/components/sidebar-menu/sidebar-menu.component.scss
+++ b/src/app/common/components/sidebar-menu/sidebar-menu.component.scss
@@ -193,7 +193,7 @@ m-sidebarMenu {
           object-fit: contain;
         }
         .m-sidebarMenu__userDetails {
-          & > {
+          > {
             padding: 8px 0;
           }
           .m-sidebarMenu__userDetails__name {
