--- a/src/app/common/layout/sidebar/navigation.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation.component.ng.scss
@@ -137,6 +137,7 @@
   }
 
   .m-sidebarNavigation__overlay {
+    @include z-index(topbar);
     @include m-theme() {
       background-color: rgba(themed($m-black-always), 0.4);
     }
