--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
@@ -149,9 +149,12 @@
     <li
       class="m-dropdownList__item m-userMenuDropdown__item"
       *ngIf="getCurrentUser()"
-      (click)="closeMenu()"
     >
-      <a routerLink="/logout" data-ref="topnav-usermenu-logout">
+      <a
+        (click)="closeMenu()"
+        routerLink="/logout"
+        data-ref="topnav-usermenu-logout"
+      >
         <span i18n="@@COMMON__LOGOUT">Logout</span>
       </a>
     </li>
