--- a/src/app/modules/newsfeed/feeds/feed-header/feed-type-popover/feed-type-popover.component.ng.scss
+++ b/src/app/modules/newsfeed/feeds/feed-header/feed-type-popover/feed-type-popover.component.ng.scss
@@ -78,6 +78,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        text-decoration: none;
 
         &:hover {
           @include m-theme() {
